# python-web-module-13

./: README.md
part1/: .env  README.md  main.py  pyproject.toml
part1/migrations/: env.py
part1/migrations/versions/: 46ad45fa942d_init.py  b97f64a99f9d_is_confirmed_user.py
part1/src/: schemas.py
part1/src/conf/: config.py
part1/src/database/: db.py  models.py
part1/src/repository/: contacts.py  users.py
part1/src/routes/: auth.py  contacts.py  users.py
part1/src/services/: auth.py  email.py
part1/src/services/templates/: email_template.html
part2/: .env  docker-compose.yml  pyproject.toml
part2/notes/: README.md
part2/notes/authors/: forms.py  models.py  urls.py  utils.py  views.py
part2/notes/authors/migrations/: 0001_initial.py  0002_remove_author_quotes.py  0003_author_quotes.py  0004_remove_author_quotes.py  0005_rename_name_author_fullname.py  0006_author_born_date_author_born_location_and_more.py  0007_alter_author_born_date_alter_author_born_location_and_more.py  0008_alter_author_fullname.py  0009_alter_author_born_date_alter_author_born_location_and_more.py  0010_alter_author_born_date_alter_author_born_location.py  0011_alter_author_fullname.py  0012_alter_author_born_date_alter_author_born_location_and_more.py
part2/notes/notes/: settings.py  urls.py
part2/notes/quotes/: forms.py  models.py  urls.py  views.py
part2/notes/quotes/migrations/: 0001_initial.py  0002_quote_author.py  0003_rename_name_quote_quote.py  0004_quote_tags.py
part2/notes/users/: forms.py  views.py
part2/notes/utils/: add_quotes_to_mongo.py
(+10 files in other folders)
